manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cse644
  labels:
    app.kubernetes.io/part-of: cse644-kubernetes-assignment
