manifests/05-applications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-nginx
  namespace: cse644
  labels:
    app: custom-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: custom-nginx
  template:
    metadata:
      labels:
        app: custom-nginx
    spec:
      containers:
        - name: nginx
          image: cse644-custom-nginx-k8s:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web
  namespace: cse644
  labels:
    app: python-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-web
  template:
    metadata:
      labels:
        app: python-web
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: python-web
          image: cse644-python-web-k8s:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: application-data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /health
              port: 8888
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8888
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: application-data
          persistentVolumeClaim:
            claimName: python-web-data
---
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx
  namespace: cse644
spec:
  type: ClusterIP
  selector:
    app: custom-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: python-web
  namespace: cse644
spec:
  type: ClusterIP
  selector:
    app: python-web
  ports:
    - name: http
      port: 8888
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: python-web-loadbalancer
  namespace: cse644
spec:
  type: LoadBalancer
  selector:
    app: python-web
  ports:
    - name: http
      port: 8888
      targetPort: 8888
      nodePort: 30088
