manifests/06-haproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-edge
  namespace: cse644
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-edge
  template:
    metadata:
      labels:
        app: haproxy-edge
    spec:
      containers:
        - name: haproxy
          image: haproxy:3.1-alpine
          imagePullPolicy: IfNotPresent
          args: ["-f", "/usr/local/etc/haproxy/haproxy.cfg"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy
              readOnly: true
      volumes:
        - name: haproxy-config
          configMap:
            name: haproxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-edge
  namespace: cse644
spec:
  type: ClusterIP
  selector:
    app: haproxy-edge
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-nodeport
  namespace: cse644
spec:
  type: NodePort
  selector:
    app: haproxy-edge
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
